# whereisthegooglecar

./: README.md  compose.yaml
.husky/: pre-push
api/: wrangler.toml
bot/: .python-version  Dockerfile  bot.py  pyproject.toml
bot/cogs/: listener.py  manual_submission.py  sync.py  web_submission.py
bot/middleware/: s3_upload.py
bot/utils/: spotting.py  submission.py
site/: bun.lockb  next.config.js  package.json
site/src/: mdx-components.tsx
site/src/components/: generic-mdx-layout.tsx
site/src/components/layout/: footer.tsx
site/src/components/layout/navbar/: mobileNavBar.tsx
site/src/pages/: _app.tsx  _document.tsx  about.mdx  privacy-policy.mdx
site/src/pages/api/: sitemap.xml.tsx
site/src/pages/spotting/: [id].tsx
