[project]
name = "whereisthegooglecar_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.3",
    "aiosignal==1.3.1",
    "aiosqlite==0.19.0",
    "async-timeout==4.0.3",
    "asyncpg==0.29.0",
    "attrs==23.2.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "cloudflare>=3.1.1",
    "discord-py==2.3.2",
    "discord-py-interactions==5.11.0",
    "discord-typings==0.7.0",
    "emoji==2.10.1",
    "emoji-country-flag==1.3.2",
    "ffmpeg-python==0.2.0",
    "frozenlist==1.4.1",
    "future==1.0.0",
    "hiredis==2.3.2",
    "idna==3.6",
    "imageio==2.34.0",
    "jmespath==1.0.1",
    "minio>=7.2.15",
    "multidict==6.0.5",
    "numpy==1.26.4",
    "pillow==10.2.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "redis==5.0.2",
    "requests==2.31.0",
    "six==1.16.0",
    "tomli==2.0.1",
    "typing-extensions==4.9.0",
    "upstash-redis==1.0.0",
    "urllib3==2.0.7",
    "yarl==1.9.4",
]
